<resources>

    <string name="app_name">SB</string>

    <string name="terms_and_conditions">Terms and Conditions</string>

    <string name="t_and_c_1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nisl eros, pulvinar facilisis justo mollis, auctor
        consequat urna.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nisl eros, pulvinar facilisis justo mollis, auctor
        consequat urna.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nisl eros, pulvinar facilisis justo mollis, auctor
        consequat urna.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nisl eros, pulvinar facilisis justo mollis, auctor
        consequat urna.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nisl eros, pulvinar facilisis justo mollis, auctor
        consequat urna.</string>

    <string name="t_and_c_2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nisl eros, pulvinar facilisis justo mollis,
        auctor consequat urna</string>

    <string name="t_and_c_3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nisl eros, pulvinar facilisis justo mollis,
        auctor consequat urna.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nisl eros, pulvinar facilisis justo mollis,
        auctor consequat urna.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nisl eros, pulvinar facilisis justo mollis,
        auctor consequat urna.Lorem ipsum dolor sit amet,</string>

    <string name="t_and_c_4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nisl eros, pulvinar facilisis justo mollis,
        auctor consequat urna.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nisl eros, pulvinar facilisis justo mollis,
        auctor consequat urna.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nisl eros, pulvinar facilisis justo mollis,
        auctor consequat urna.Lorem ipsum dolor sit amet,</string>
    <string name="accept_terms_and_conditions">Accept Terms and Conditions</string>
    <string name="submit">Submit</string>
    <string name="menu_general">General</string>
    <string name="menu_rooms">Rooms</string>
    <string name="about_us">ABOUT US</string>
    <string name="contact_us">CONTACT US</string>
    <string name="contact_no_1">+91 0126358214</string>
    <string name="contact_no_2">+91 9585625447</string>
    <string name="email_id">abcxyz123@gmail.com</string>
    <string name="favourite">FAVOURITE</string>
    <string name="other_title">OTHER TITLE</string>
    <string name="add_rooms">Add Rooms</string>
    <string name="about_us_button">About Us</string>
    <string name="category_button">Category</string>
    <string name="contact_us_button">Contact Us</string>
    <string name="lights">Lights</string>
    <string name="all">ALL</string>
    <string name="category">Category</string>
    <string name="fans">Fans</string>
    <string name="appliances">Appliances</string>
    <string name="bedroom">Bedroom</string>
    <string name="light_1">Light 1</string>
    <string name="light_2">Light 2</string>
    <string name="bathroom">Bathroom</string>
    <string name="kitchen">Kitchen</string>
    <string name="switch_board_1">Switch Board 1</string>
    <string name="room_no">Room 1</string>
    <string name="fan_1">Fan 1</string>
    <string name="light_3">Light 3</string>
    <string name="ac">AC</string>

</resources>