<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/imageViewWaveTopAboutUs"
        android:layout_width="1440dp"
        android:layout_height="@dimen/_210sdp"
        android:background="@drawable/ic_wave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textViewAboutUs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_us"
        android:textColor="@color/yellow"
        android:textSize="@dimen/_20ssp"
        android:fontFamily="@font/muli"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/_150sdp"
        android:layout_marginStart="@dimen/_14sdp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadeScrollbars="false"
        android:scrollbarThumbVertical="@color/grey"
        android:scrollbarStyle="outsideInset"
        android:paddingRight="@dimen/_20sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_180sdp"
        android:layout_marginBottom="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewAboutUs1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/t_and_c_1"
                android:textColor="@color/white"
                android:fontFamily="@font/muli_semibold"
                android:textSize="@dimen/_10ssp"/>

            <TextView
                android:id="@+id/textViewAboutUs2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/t_and_c_2"
                android:textColor="@color/white"
                android:fontFamily="@font/muli_semibold"
                android:textSize="@dimen/_10ssp"
                android:layout_marginTop="@dimen/_10sdp"/>

            <TextView
                android:id="@+id/textViewAboutUs3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/t_and_c_3"
                android:textColor="@color/white"
                android:fontFamily="@font/muli_semibold"
                android:textSize="@dimen/_10ssp"
                android:layout_marginTop="@dimen/_10sdp"/>

            <TextView
                android:id="@+id/textViewAboutUs4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/t_and_c_4"
                android:textColor="@color/white"
                android:fontFamily="@font/muli_semibold"
                android:textSize="@dimen/_10ssp"
                android:layout_marginTop="@dimen/_10sdp"/>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>