<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#0B0B0B">

    <TextView
        android:id="@+id/textViewCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:textColor="@color/white"
        android:textSize="@dimen/_15ssp"
        android:fontFamily="@font/muli"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/_26sdp"
        android:layout_marginTop="@dimen/_52sdp"/>

    <TextView
        android:id="@+id/textViewAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all"
        android:textSize="@dimen/_10ssp"
        android:textColor="#404040"
        app:layout_constraintTop_toBottomOf="@id/textViewCategory"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/_11sdp"
        android:layout_marginStart="@dimen/_26sdp"/>

    <Button
        android:id="@+id/buttonLights"
        android:layout_width="@dimen/_108sdp"
        android:layout_height="@dimen/_127sdp"
        app:layout_constraintTop_toBottomOf="@id/textViewAll"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_32sdp"
        android:drawableTop="@drawable/ic_idea"
        android:text="@string/lights"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:fontFamily="@font/muli_semibold"
        android:paddingTop="@dimen/_20sdp"
        android:background="@drawable/button_pressed"/>

    <Button
        android:id="@+id/buttonFans"
        android:layout_width="@dimen/_108sdp"
        android:layout_height="@dimen/_127sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_32sdp"
        android:background="@drawable/button_pressed"
        android:drawableTop="@drawable/ic_fan"
        android:fontFamily="@font/muli_semibold"
        android:paddingTop="@dimen/_20sdp"
        android:text="@string/fans"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/buttonLights"
        app:layout_constraintTop_toBottomOf="@id/textViewAll" />

    <Button
        android:id="@+id/buttonAppliances"
        android:layout_width="@dimen/_108sdp"
        android:layout_height="@dimen/_127sdp"
        app:layout_constraintTop_toBottomOf="@id/buttonLights"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_32sdp"
        android:drawableTop="@drawable/ic_appliances"
        android:text="@string/appliances"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:fontFamily="@font/muli_semibold"
        android:paddingTop="@dimen/_20sdp"
        android:background="@drawable/button_pressed"/>

    <Button
        android:id="@+id/buttonAc"
        android:layout_width="@dimen/_108sdp"
        android:layout_height="@dimen/_127sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_32sdp"
        android:background="@drawable/button_pressed"
        android:drawableTop="@drawable/acmain"
        android:fontFamily="@font/muli_semibold"
        android:paddingTop="@dimen/_30sdp"
        android:text="AC"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/buttonAppliances"
        app:layout_constraintTop_toBottomOf="@id/buttonFans" />

</androidx.constraintlayout.widget.ConstraintLayout>