<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/imageViewWaveTopContactUs"
        android:layout_width="1440dp"
        android:layout_height="@dimen/_210sdp"
        android:background="@drawable/ic_wave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textViewContactUs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_us"
        android:textColor="@color/yellow"
        android:textSize="@dimen/_20ssp"
        android:fontFamily="@font/muli"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/_150sdp"
        android:layout_marginStart="@dimen/_14sdp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadeScrollbars="false"
        android:scrollbarThumbVertical="@color/grey"
        android:scrollbarStyle="outsideInset"
        android:paddingRight="@dimen/_20sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_180sdp"
        android:layout_marginBottom="@dimen/_50sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewContactUs1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/t_and_c_3"
                android:textColor="@color/white"
                android:fontFamily="@font/muli_semibold"
                android:textSize="@dimen/_10ssp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/_10sdp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageViewCallIcon1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_icon_ionic_ios_call"
                        android:layout_gravity="center"/>

                    <TextView
                        android:id="@+id/textViewPhoneNo1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/contact_no_1"
                        android:autoLink="phone"
                        android:textColorLink="@color/white"
                        android:textSize="@dimen/_10ssp"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_20sdp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/_10sdp">

                    <ImageView
                        android:id="@+id/imageViewCallIcon2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_icon_ionic_ios_call"
                        android:layout_gravity="center"/>

                    <TextView
                        android:id="@+id/textViewPhoneNo2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/contact_no_2"
                        android:autoLink="phone"
                        android:textColorLink="@color/white"
                        android:textSize="@dimen/_10ssp"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_20sdp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/_10sdp">

                    <ImageView
                        android:id="@+id/imageViewEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_icon_material_email"
                        android:layout_gravity="center"/>

                    <TextView
                        android:id="@+id/textViewEmailID"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email_id"
                        android:autoLink="email"
                        android:textColorLink="@color/white"
                        android:textSize="@dimen/_10ssp"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_20sdp"/>

                </LinearLayout>


            </LinearLayout>

            <TextView
                android:id="@+id/textViewContactUs2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/t_and_c_3"
                android:textColor="@color/white"
                android:fontFamily="@font/muli_semibold"
                android:textSize="@dimen/_10ssp"
                android:layout_marginTop="@dimen/_10sdp"/>

            <TextView
                android:id="@+id/textViewContactUs3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/t_and_c_2"
                android:textColor="@color/white"
                android:fontFamily="@font/muli_semibold"
                android:textSize="@dimen/_10ssp"
                android:layout_marginTop="@dimen/_10sdp"/>

            <TextView
                android:id="@+id/textViewContactUs4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/t_and_c_2"
                android:textColor="@color/white"
                android:fontFamily="@font/muli_semibold"
                android:textSize="@dimen/_10ssp"
                android:layout_marginTop="@dimen/_10sdp"/>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>